# cloud-haskell-example

./: README.md  cloud-haskell-example.cabal
src/: Closure.hs  SingleNode.hs
