name: cloud-haskell-example
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: anshu.avinash35@gmail.com
category: Distribution
author: Anshu Avinash
extra-source-files:
    README.md

executable single-node-example
    build-depends:
        base >=4.7 && <4.8,
        distributed-process >=0.5 && <0.6,
        network-transport-tcp >=0.4 && <0.5
    main-is: SingleNode.hs
    default-language: Haskell2010

executable closure-example
    build-depends:
        base >=4.7 && <4.8,
        distributed-process >=0.5 && <0.6,
        distributed-process-simplelocalnet >=0.2 && <0.3
    main-is: Closure.hs
    default-language: Haskell2010

